--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "lint": "eslint src __test__",
     "lint:fix": "eslint --fix src __test__",
     "build": "rollup --config",
-    "prepublish": "check-node-version --npm \">=4\" || npm run prepare",
     "prepare": "npm run build",
     "prepublishOnly": "NODE_ENV=production npm run build"
   },
   "repository": "github:node-ebml/node-ebml",
   "engines": {
-    "node": ">= 6.4"
+    "node": ">= 8.0"
   },
   "keywords": [
     "ebml",
@@ -50,7 +49,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
-    "check-node-version": "^4.0.1",
+    "core-js": "3.2.1",
     "eslint": "^6.2.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^4.1.0",
