--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "eslint-plugin-prettier": "^3.0.0",
     "flow-bin": "0.92.1",
     "flow-typed": "^2.5.1",
+    "husky": "^3.0.5",
     "jest": "^24.5.0",
     "jest-html-reporter": "^2.4.2",
+    "lint-staged": "^9.2.5",
     "lodash.foreach": "^4.5.0",
     "lodash.map": "^4.6.0",
     "lodash.range": "^3.2.0",
@@ -100,5 +102,29 @@
   "bugs": {
     "url": "https://github.com/node-ebml/node-ebml/issues"
   },
-  "homepage": "https://github.com/node-ebml/node-ebml#readme"
+  "homepage": "https://github.com/node-ebml/node-ebml#readme",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "CI=true jest"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix --no-ignore",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.yml": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.md": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
