Add in the 'ES synax' rule
Signed-off-by: Jonathan Sifuentes <jayands.dev@gmail.com>

--- a/src/ebml/.eslintrc.json
+++ b/src/ebml/.eslintrc.json
@@ -1,1 +1,6 @@
-{ "rules": { "no-underscore-dangle": "off" } }
+{
+  "rules": {
+    "no-underscore-dangle": "off",
+    "node/no-unsupported-features/es-syntax": "off"
+  }
+}
