--- a/package.json
+++ b/package.json
@@ -111,5 +111,6 @@
     "*.js": "eslint --fix --no-ignore",
     "*.json": "prettier --write",
     "README.md": "prettier --write"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
