--- a/package.json
+++ b/package.json
@@ -84,11 +84,11 @@
     "rollup-plugin-terser": "7.0.2",
     "sinon": "^6.3.5",
     "stream-mock": "^1.2.0",
-    "unexpected": "^11.0.1",
+    "unexpected": "^12.0.4",
     "unexpected-date": "^2.0.0",
-    "unexpected-eventemitter": "^1.0.1",
-    "unexpected-jest-snapshot": "^0.1.0",
-    "unexpected-sinon": "^10.10.1"
+    "unexpected-eventemitter": "^2.2.0",
+    "unexpected-sinon": "^11.0.1",
+    "unexpected-snapshot": "^1.2.0"
   },
   "contributors": [
     "Chris Price <price.c@gmail.com>",
