Changes to Yarn 3 config
Signed-off-by: Jonathan Sifuentes <jayands.dev@gmail.com>

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
   "lint-staged": {
     "*.js": "eslint --fix --no-ignore",
     "*.json": "prettier --write",
+    "*.yml": "prettier --write",
     "README.md": "prettier --write"
   },
   "packageManager": "yarn@3.2.0"
