--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,19 +10,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [6.x, 8.x, 10.x]
+        node-version: [12.x, 14.x, 16.x, 17.x]
 
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
-        run: npm install -g codecov
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+      - name: Install Global binaries
+        run: npm install -g codecov yarn
+
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - run: yarn build
-      - run: yarn test
-      - run: codecov
 
+      - name: Build
+      - run: yarn build
+
+      - name: Run tests
+      - run: yarn test
+
+      - name: Check code coverage
+      - run: codecov
