--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,11 @@
-nodeLinker: node-modules
+nodeLinker: pnp
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
+  - path: .yarn/plugins/@yarnpkg/plugin-stage.cjs
+    spec: "@yarnpkg/plugin-stage"
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: "@yarnpkg/plugin-version"
 
 yarnPath: .yarn/releases/yarn-3.2.0.cjs
-enableGlobalCache: true
